--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,18 @@
-ÿôè§é^½é[º)]~)^Â«{*.q©Úu×(ø º¶­Š‰è¦Ø¨
+buildscript {
+    ext.kotlin_version = "1.8.0"
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:8.0.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
